--- a/src/components/contactUs/Contactus.css
+++ b/src/components/contactUs/Contactus.css
@@ -4,7 +4,9 @@ border:0;
 box-sizing: border-box;
 
 }
-
+.contactForm p{
+color: white;
+}
 #contactDetails{
    display: flex;
    flex-direction: column;
@@ -12,17 +14,22 @@ box-sizing: border-box;
    padding: 2em;
 }
 .contactDetails a{
-    color: #0AA5CD;
+    color:white;
+    font-weight: bolder;
     padding: 1em;
     margin: 2em;
     text-decoration: none;
-    
+
 }
 .contactDetails a:hover{
-color:#254b55 ;
+color:rgb(231, 209, 12);
 }
 
 .contactWrapper{
+    background-image: url("car5.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+   
    border:1px darkgrey solid;
    display: grid;
    grid-template-columns: 1fr 1fr;
@@ -59,15 +66,16 @@ color:#254b55 ;
   border-radius: 0.5rem;
   background-color: #0AA5CD;
   color: white;
+  font-weight: bold;
 }
 .contactSubmit:hover{
-    background-color: #254b55;
+    background-color: rgb(231, 209, 12);
     color: white;
     cursor: pointer;
 }
  
 #contSpan{
-color:#0AA5CD ;
+color:rgb(231, 209, 12) ;
 text-decoration: none;
 font-weight: bold;
 
@@ -75,6 +83,39 @@ font-weight: bold;
 
 .contactWrapper h2{
     text-align: center;
+    color: white;
     
+
+}
+
+.errorMessage1{
+    color: white;
+}
+@media only screen and (max-width: 530px) {
+    .contactDetails a{
+        font-size: 0.5em;
+        padding: 0.5em;
+        margin: 0.5em;
+    
+    }
+    .contactWrapper{
+        margin: 0;
+       padding:0%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+}
+@media only screen and (max-width: 410px){
+
+    .contactWrapper h2{
+        font-size: 1em;
+    }
+    .contactWrapper{
+        border: none;
+        display: flex;
+        flex-direction: column;
+    }
 
 }
