--- a/src/components/contactUs/Contactus.css
+++ b/src/components/contactUs/Contactus.css
@@ -4,8 +4,18 @@ border:0;
 box-sizing: border-box;
 
 }
+.contactForm{
+background-color: #E9EDF2;
+border-radius: 1em;
+justify-content: center;
+text-align: center;
+/* margin-top: 2em; */
+padding: 0.5em;
+width:70%;
+
+}
 .contactForm p{
-color: white;
+color: black;
 }
 #contactDetails{
    display: flex;
@@ -14,7 +24,7 @@ color: white;
    padding: 2em;
 }
 .contactDetails a{
-    color:white;
+    color:#192032;
     font-weight: bolder;
     padding: 1em;
     margin: 2em;
@@ -22,23 +32,23 @@ color: white;
 
 }
 .contactDetails a:hover{
-color:rgb(231, 209, 12);
+color:#0AA5CD;
 }
 
 .contactWrapper{
-    background-image: url("car5.jpg");
+    /* background-image: url("car5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
    
-   border:1px darkgrey solid;
+   border:1px darkgrey solid; */
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 2em;
    padding: 2em;
   justify-items: center;
-  background-color: #E9EDF2;
+  /* background-color: #E9EDF2;
   border-radius: 1em;
-  
+   */
    
 }
 
@@ -48,34 +58,29 @@ color:rgb(231, 209, 12);
     width: 80%;
     border: 1px solid grey;
     padding: 0.5em;
-    margin: 1em;
+    margin: 2em;
     border-radius: 0.5em;
-  
-
 }
 
-.contactForm{
-    margin-top: 2em;
-    padding: 1em;
-   
-}
+
 .contactSubmit{
   text-align: center;
   padding: 1em;
-  margin-left: 4em;
+  margin-right: 1.5em;
   border-radius: 0.5rem;
-  background-color: #0AA5CD;
+  background-color: #192032;
   color: white;
   font-weight: bold;
+  /* width: 25%; */
 }
 .contactSubmit:hover{
-    background-color: rgb(231, 209, 12);
+    background-color: #0AA5CD;
     color: white;
     cursor: pointer;
 }
  
-#contSpan{
-color:rgb(231, 209, 12) ;
+#contSpan {
+color:#0AA5CD ;
 text-decoration: none;
 font-weight: bold;
 
@@ -83,13 +88,13 @@ font-weight: bold;
 
 .contactWrapper h2{
     text-align: center;
-    color: white;
+    color: black;
+    margin: 0.5em;
     
-
 }
 
 .errorMessage1{
-    color: white;
+    color: red;
 }
 @media only screen and (max-width: 530px) {
     .contactDetails a{
@@ -104,6 +109,9 @@ font-weight: bold;
         display: flex;
         flex-direction: column;
         width: 100%;
+    }
+    .contactSubmit{
+       
     }
 
 }
