--- a/src/components/registration/Login.css
+++ b/src/components/registration/Login.css
@@ -50,19 +50,34 @@ input:focus {
   margin-left: 15px;
   margin-right: 5px;
 }
-
+.reg {
+  display: flex !important  ;
+  flex-direction: column !important;
+  align-items: center;
+}
+.reg .card-footer a {
+  margin: auto 0.3em;
+}
 .links {
   color: white;
+}
+.login_btn2 {
+  color: white;
+  background-color: #192032 !important;
+  border-radius: 10px;
+  /* border-radius: 26% 74% 27% 73% / 0% 100% 0% 100%; */
+}
+
+.login_btn2:hover {
+  color: white;
+  background-color: white;
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 .links a {
   margin-left: 4px;
   color: #0aa5cd;
-}
-@media only screen and (max-width: 900px) {
-  .Home {
-    height: 60em;
-  }
 }
 
 @media only screen and (max-width: 426px) {
@@ -74,11 +89,20 @@ input:focus {
     right: 8px;
   }
 }
+@media only screen and (max-width: 570px) {
+  .card-footer2 {
+    font-size: 0.8em;
+    padding: 0.5em;
+  }
+  .card1 {
+    width: 100%;
+    height: 22em;
+    margin-right: 1.5em;
+  }
+}
 @media only screen and (max-width: 375px) {
   .card1 {
     width: 100%;
-    height: auto;
-    margin-right: 1em;
   }
   .fab:before {
     font-size: 0.7em;
@@ -91,9 +115,7 @@ input:focus {
   .remember input {
     padding-bottom: 1em;
   }
-  .input-group > .form-control:not(:first-child) {
-    font-size: 0.8em;
-  }
+
   .links {
     font-size: 1em;
   }
