--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -99,6 +99,12 @@ nav ul li a:hover {
   transform: scale(1.1);
   transition: 0.3s;
 }
+@media screen and (max-width: 1024px) {
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+  }
+}
 @media screen and (max-width: 768px) {
   .navbar {
     display: flex;
@@ -146,6 +152,14 @@ nav ul li a:hover {
   }
 }
 
+@media screen and (max-width: 540px) {
+  .burger-menu {
+    display: block;
+    margin-left: 13em;
+    border: none;
+    background: none;
+  }
+}
 @media screen and (max-width: 480px) {
   .navbar {
     display: flex;
