--- a/src/components/registration/Login.css
+++ b/src/components/registration/Login.css
@@ -65,12 +65,11 @@ input:focus {
   color: white;
   background-color: #192032 !important;
   border-radius: 10px;
+  padding: 1em 2em;
   /* border-radius: 26% 74% 27% 73% / 0% 100% 0% 100%; */
 }
 
 .login_btn2:hover {
-  color: white;
-  background-color: white;
   transform: scale(1.1);
   transition: 0.3s;
 }
