--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+body {
+  font-family: "Open Sans", sans-serif !important;
+}
 .jump button {
   border: none;
   outline-style: none;
@@ -18,4 +23,7 @@
   font-size: 1rem;
   display: flex;
   justify-content: center;
+}
+.routes-div {
+  min-height: 90vh !important ;
 }
