--- a/src/components/listingCars/popup.css
+++ b/src/components/listingCars/popup.css
@@ -108,6 +108,9 @@
   .box {
     width: 80vw;
   }
+  .box h6 {
+    font-size: 1rem !important;
+  }
 }
 @media screen and (max-width: 280px) {
   .box {
