--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -94,6 +94,7 @@ nav ul li a:hover {
   border-radius: 20px;
   background-color: #192032;
   cursor: pointer;
+  outline-style: none;
 }
 .logout-btn-header:hover {
   transform: scale(1.1);
