--- a/src/components/landingpage/landingpage.css
+++ b/src/components/landingpage/landingpage.css
@@ -211,6 +211,10 @@
   .cars-cards .card {
     width: 12em !important  ;
   }
+  .landingpage-about {
+    display: flex;
+    flex-direction: column;
+  }
 }
 @media screen and (max-width: 540px) {
   .landingpage-explore-cars {
@@ -229,6 +233,9 @@
     display: flex;
     flex-direction: column;
   }
+  .landingpage-about-text p {
+    padding: 0;
+  }
 }
 @media screen and (max-width: 420px) {
   .landingpage-explore-cars {
@@ -237,10 +244,6 @@
   }
   .landingpage-explore h3 {
     width: 100%;
-  }
-  .landingpage-about {
-    display: flex;
-    flex-direction: column;
   }
   .landingpage-about-text {
     padding-left: 0em;
